finish refactoring user service and add auth services
