# docs/auth_service.swagger.json
@@ -18,7 +18,6 @@
   "paths": {
     "/v1/auth/login": {
       "post": {
-        "summary": "Authenticates a user based on their username or email and password",
         "operationId": "AuthService_AuthenticateUser",
         "responses": {
           "200": {
@@ -48,6 +47,38 @@
           "AuthService"
         ]
       }
+    },
+    "/v1/auth/refresh_token": {
+      "post": {
+        "operationId": "AuthService_RefreshToken",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/limestoneStandardAuthResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/limestoneRefreshTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "AuthService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -61,8 +92,7 @@
           "type": "string"
         },
         "password": {
-          "type": "string",
-          "title": "The password for authentication"
+          "type": "string"
         }
       }
     },
@@ -70,16 +100,32 @@
       "type": "object",
       "properties": {
         "accessToken": {
-          "type": "string",
-          "description": "The access token for subsequent authenticated requests."
+          "type": "string"
         },
         "refreshToken": {
-          "type": "string",
-          "description": "The refresh token to obtain a new access token when it expires."
+          "type": "string"
         },
         "userId": {
-          "type": "string",
-          "description": "The ID of the authenticated user (if successful)."
+          "type": "string"
+        }
+      }
+    },
+    "limestoneDataRefreshTokenResponse": {
+      "type": "object",
+      "properties": {
+        "accessToken": {
+          "type": "string"
+        },
+        "refreshToken": {
+          "type": "string"
+        }
+      }
+    },
+    "limestoneRefreshTokenRequest": {
+      "type": "object",
+      "properties": {
+        "refreshToken": {
+          "type": "string"
         }
       }
     },
@@ -95,8 +141,13 @@
         "message": {
           "type": "string"
         },
-        "data": {
-          "$ref": "#/definitions/limestoneDataAuthenticateUserResponse"
+        "authenticateUserData": {
+          "$ref": "#/definitions/limestoneDataAuthenticateUserResponse",
+          "title": "Unique field name"
+        },
+        "refreshTokenData": {
+          "$ref": "#/definitions/limestoneDataRefreshTokenResponse",
+          "title": "Unique field name"
         }
       }
     },
