# internal/infrastructure/auth/public_service.go
@@ -12,6 +12,7 @@ var UnprotectedRoutes = map[string]bool{
 }
 
 var UnprotectedRoutesHTTP = map[UnprotectedRoute]bool{
-	{Path: "/v1/users", Method: "POST"}:      true,
-	{Path: "/v1/auth/login", Method: "POST"}: true,
+	{Path: "/v1/users", Method: "POST"}:              true,
+	{Path: "/v1/auth/login", Method: "POST"}:         true,
+	{Path: "/v1/auth/refresh_token", Method: "POST"}: true,
 }
